fix pic overflow

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -93,5 +93,8 @@ body {
 
   .main-container {
     margin-top: 8px;
+
+    background-size: 300% 1160px;
+    background-position: top;
   }
 }
